--- a/dungeon.html
+++ b/dungeon.html
@@ -91,37 +91,125 @@
 <script>
 const dropTables = {
   Enchanted: [
-    {name: 'Enchanted Essence', probability: 100, minQuantity: 400, maxQuantity: 800},
-    {name: 'Enchanted Essence', probability: 5.0, minQuantity: 2000, maxQuantity: 4000},
-    {name: 'Enchanted Token', probability: 100, minQuantity: 250, maxQuantity: 500},
-    {name: 'Enchanted Token', probability: 5.0, minQuantity: 1500, maxQuantity: 3000},
-    {name: 'Large Treasure Chest', probability: 30.0, minQuantity: 1, maxQuantity: 7},
-    {name:'Amethyst', probability: 60.0, minQuantity: 5, maxQuantity: 20},
-    {name:'Sunstone', probability: 50.0, minQuantity: 1, maxQuantity: 5},
-    {name:'Crippling Slash', probability: 50.0, minQuantity: 1, maxQuantity: 2},
-    {name:'Penetrating Shot', probability: 50.0, minQuantity: 1, maxQuantity: 2},
-    {name:'Arcane Reflection', probability: 50.0, minQuantity: 1, maxQuantity: 2},
-    {name:'Mana Spring', probability: 50.0, minQuantity: 1, maxQuantity: 2},
-    {name:'Knight\'s Ingot', probability: 4.0, minQuantity: 1, maxQuantity: 1},
-    {name:'Bishop\'s Scroll', probability: 4.0, minQuantity: 1, maxQuantity: 1},
-    {name:'Royal Cloth', probability: 4.0, minQuantity: 1, maxQuantity: 1},
-    {name:'Regal Jewel', probability: 2.0, minQuantity: 1, maxQuantity: 1},
-    {name:'Sundering Jewel', probability: 2.0, minQuantity: 1, maxQuantity: 1},
-    {name:'Enchanted Chest Key', probability: 2.0, minQuantity: 1, maxQuantity: 1},
-    {name:'Enchanted Cloak', probability: 4.0, minQuantity: 1, maxQuantity: 1},
-    {name:'Knight\'s Aegis', probability: 0.2, minQuantity: 1, maxQuantity: 1},
-    {name:'Bishop\'s Codex', probability: 0.2, minQuantity: 1, maxQuantity: 1},
-    {name:'Royal Water Robe Top', probability: 0.04, minQuantity: 1, maxQuantity: 1},
-    {name:'Royal Water Robe Bottoms', probability: 0.04, minQuantity: 1, maxQuantity: 1},
-    {name:'Royal Nature Robe Top', probability: 0.04, minQuantity: 1, maxQuantity: 1},
-    {name:'Royal Nature Robe Bottoms', probability: 0.04, minQuantity: 1, maxQuantity: 1},
-    {name:'Royal Fire Robe Top', probability: 0.04, minQuantity: 1, maxQuantity: 1},
-    {name:'Royal Fire Robe Bottoms', probability: 0.04, minQuantity: 1, maxQuantity: 1},
-    {name:'Regal Sword', probability: 0.05, minQuantity: 1, maxQuantity: 1},
-    {name:'Sundering Crossbow', probability: 0.05, minQuantity: 1, maxQuantity: 1},
+    { name: 'Enchanted Essence', probability: 100, minQuantity: 400, maxQuantity: 800 },
+    { name: 'Enchanted Essence', probability: 5.0, minQuantity: 2000, maxQuantity: 4000 },
+    { name: 'Enchanted Token', probability: 100, minQuantity: 250, maxQuantity: 500 },
+    { name: 'Enchanted Token', probability: 5.0, minQuantity: 1500, maxQuantity: 3000 },
+    { name: 'Large Treasure Chest', probability: 30.0, minQuantity: 1, maxQuantity: 7 },
+    { name: 'Amethyst', probability: 60.0, minQuantity: 5, maxQuantity: 20 },
+    { name: 'Sunstone', probability: 50.0, minQuantity: 1, maxQuantity: 5 },
+    { name: 'Crippling Slash', probability: 50.0, minQuantity: 1, maxQuantity: 2 },
+    { name: 'Penetrating Shot', probability: 50.0, minQuantity: 1, maxQuantity: 2 },
+    { name: 'Arcane Reflection', probability: 50.0, minQuantity: 1, maxQuantity: 2 },
+    { name: 'Mana Spring', probability: 50.0, minQuantity: 1, maxQuantity: 2 },
+    { name: "Knight's Ingot", probability: 4.0, minQuantity: 1, maxQuantity: 1 },
+    { name: "Bishop's Scroll", probability: 4.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Royal Cloth', probability: 4.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Regal Jewel', probability: 2.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Sundering Jewel', probability: 2.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Enchanted Chest Key', probability: 2.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Enchanted Cloak', probability: 4.0, minQuantity: 1, maxQuantity: 1 },
+    { name: "Knight's Aegis", probability: 0.2, minQuantity: 1, maxQuantity: 1 },
+    { name: "Bishop's Codex", probability: 0.2, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Royal Water Robe Top', probability: 0.04, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Royal Water Robe Bottoms', probability: 0.04, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Royal Nature Robe Top', probability: 0.04, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Royal Nature Robe Bottoms', probability: 0.04, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Royal Fire Robe Top', probability: 0.04, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Royal Fire Robe Bottoms', probability: 0.04, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Regal Sword', probability: 0.05, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Sundering Crossbow', probability: 0.05, minQuantity: 1, maxQuantity: 1 },
   ],
-  // (Sinister, Chimerical, Pirate will be filled similarly; if you want I can paste fully too.)
+
+  Sinister: [
+    { name: 'Sinister Essence', probability: 100.0, minQuantity: 400, maxQuantity: 800 },
+    { name: 'Sinister Essence', probability: 5.0, minQuantity: 2000, maxQuantity: 4000 },
+    { name: 'Sinister Token', probability: 100.0, minQuantity: 250, maxQuantity: 500 },
+    { name: 'Sinister Token', probability: 5.0, minQuantity: 1500, maxQuantity: 3000 },
+    { name: 'Large Treasure Chest', probability: 30.0, minQuantity: 1, maxQuantity: 6 },
+    { name: 'Garnet', probability: 60.0, minQuantity: 5, maxQuantity: 20 },
+    { name: 'Sunstone', probability: 50.0, minQuantity: 1, maxQuantity: 3 },
+    { name: 'Penetrating Strike', probability: 50.0, minQuantity: 1, maxQuantity: 2 },
+    { name: 'Pestilent Shot', probability: 50.0, minQuantity: 1, maxQuantity: 2 },
+    { name: 'Smoke Burst', probability: 50.0, minQuantity: 1, maxQuantity: 2 },
+    { name: "Acrobat's Ribbon", probability: 4.0, minQuantity: 1, maxQuantity: 1 },
+    { name: "Magician's Cloth", probability: 4.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Chaotic Chain', probability: 2.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Sinister Chest Key', probability: 2.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Sinister Cape', probability: 4.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Acrobatic Hood', probability: 0.2, minQuantity: 1, maxQuantity: 1 },
+    { name: "Magician's Hat", probability: 0.2, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Chaotic Flail', probability: 0.05, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Cursed Bow', probability: 0.05, minQuantity: 1, maxQuantity: 1 },
+  ],
+
+  Chimerical: [
+    { name: 'Chimerical Essence', probability: 100.0, minQuantity: 400, maxQuantity: 800 },
+    { name: 'Chimerical Essence', probability: 5.0, minQuantity: 2000, maxQuantity: 4000 },
+    { name: 'Chimerical Token', probability: 100.0, minQuantity: 250, maxQuantity: 500 },
+    { name: 'Chimerical Token', probability: 5.0, minQuantity: 1500, maxQuantity: 3000 },
+    { name: 'Large Treasure Chest', probability: 30.0, minQuantity: 1, maxQuantity: 5 },
+    { name: 'Jade', probability: 60.0, minQuantity: 5, maxQuantity: 20 },
+    { name: 'Sunstone', probability: 50.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Crippling Slash', probability: 50.0, minQuantity: 1, maxQuantity: 2 },
+    { name: 'Pestilent Shot', probability: 50.0, minQuantity: 1, maxQuantity: 2 },
+    { name: 'Griffin Leather', probability: 10.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Manticore Sting', probability: 6.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Jackalope Antler', probability: 5.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Dodocamel Plume', probability: 2.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Griffin Talon', probability: 2.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Chimerical Chest Key', probability: 2.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Chimerical Quiver', probability: 3.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Griffin Tunic', probability: 0.3, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Griffin Chaps', probability: 0.3, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Manticore Shield', probability: 0.3, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Jackalope Staff', probability: 0.2, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Dodocamel Gauntlets', probability: 0.15, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Griffin Bulwark', probability: 0.05, minQuantity: 1, maxQuantity: 1 },
+  ],
+
+  Pirate: [
+    { name: 'Pirate Essence', probability: 100.0, minQuantity: 400, maxQuantity: 800 },
+    { name: 'Pirate Essence', probability: 5.0, minQuantity: 2000, maxQuantity: 4000 },
+    { name: 'Pirate Token', probability: 100.0, minQuantity: 250, maxQuantity: 500 },
+    { name: 'Pirate Token', probability: 5.0, minQuantity: 1500, maxQuantity: 3000 },
+    { name: 'Large Treasure Chest', probability: 30.0, minQuantity: 1, maxQuantity: 8 },
+    { name: 'Moonstone', probability: 50.0, minQuantity: 5, maxQuantity: 20 },
+    { name: 'Sunstone', probability: 50.0, minQuantity: 1, maxQuantity: 6 },
+    { name: 'Shield Bash', probability: 50.0, minQuantity: 1, maxQuantity: 2 },
+    { name: 'Fracturing Impact', probability: 50.0, minQuantity: 1, maxQuantity: 2 },
+    { name: 'Life Drain', probability: 50.0, minQuantity: 1, maxQuantity: 2 },
+    { name: 'Marksman Brooch', probability: 3.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Corsair Crest', probability: 3.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Damaged Anchor', probability: 3.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Maelstrom Plating', probability: 3.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Kraken Leather', probability: 3.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Kraken Fang', probability: 3.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Pirate Chest Key', probability: 2.0, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Marksman Bracers', probability: 0.2, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Corsair Helmet', probability: 0.2, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Anchorbound Plate Body', probability: 0.04, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Anchorbound Plate Legs', probability: 0.04, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Maelstrom Plate Body', probability: 0.04, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Maelstrom Plate Legs', probability: 0.04, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Kraken Tunic', probability: 0.04, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Kraken Chaps', probability: 0.04, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Rippling Trident', probability: 0.03, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Blooming Trident', probability: 0.03, minQuantity: 1, maxQuantity: 1 },
+    { name: 'Blazing Trident', probability: 0.03, minQuantity: 1, maxQuantity: 1 },
+  ]
 };
+
+const largeTreasureChest = [
+  { name: "Coin", probability: 100, minQuantity: 30000, maxQuantity: 60000 },
+  { name: "Coin", probability: 10.0, minQuantity: 150000, maxQuantity: 300000 },
+  { name: "Pearl", probability: 60.0, minQuantity: 1, maxQuantity: 3 },
+  { name: "Amber", probability: 40.0, minQuantity: 1, maxQuantity: 3 },
+  { name: "Garnet", probability: 40.0, minQuantity: 1, maxQuantity: 3 },
+  { name: "Jade", probability: 40.0, minQuantity: 1, maxQuantity: 3 },
+  { name: "Moonstone", probability: 40.0, minQuantity: 1, maxQuantity: 2 },
+];
+
 
 const largeTreasureChest = [
   {name: "Coin", probability: 100, minQuantity: 30000, maxQuantity: 60000},
