--- a/dungeon.html
+++ b/dungeon.html
@@ -215,11 +215,12 @@ async function fetchPrices() {
   const response = await fetch('https://holychikenz.github.io/MWIApi/milkyapi.json');
   const data = await response.json();
   const prices = {};
-  for (const item of data) {
-    prices[item.Name] = item.Price;
+  for (const [key, value] of Object.entries(data)) {
+    prices[key] = value;
   }
   return prices;
 }
+
 
 function calculateAverageValue(lootTable, prices) {
   let total = 0;
