--- a/test.html
+++ b/test.html
@@ -315,42 +315,122 @@ function setupCollapsibles() {
 }
 
 const lootTables = {
-  'D1': [
+  'D1': [ // Chimerical Chest
     { name: 'Chimerical Essence', probability: 100, min: 400, max: 800 },
-    { name: 'Chimerical Essence', probability: 5, min: 2000, max: 4000 },
-    { name: 'Griffin Leather', probability: 10, min: 1, max: 1 },
-    { name: 'Manticore Sting', probability: 6, min: 1, max: 1 },
-    { name: 'Jackalope Antler', probability: 5, min: 1, max: 1 },
-    { name: 'Dodocamel Plume', probability: 2, min: 1, max: 1 },
-    { name: 'Griffin Talon', probability: 2, min: 1, max: 1 }
+    { name: 'Chimerical Essence', probability: 5.0, min: 2000, max: 4000 },
+    { name: 'Chimerical Token', probability: 100, min: 250, max: 500 },
+    { name: 'Chimerical Token', probability: 5.0, min: 1500, max: 3000 },
+    { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 5 },
+    { name: 'Jade', probability: 60.0, min: 5, max: 20 },
+    { name: 'Sunstone', probability: 50.0, min: 1, max: 1 },
+    { name: 'Crippling Slash', probability: 50.0, min: 1, max: 2 },
+    { name: 'Pestilent Shot', probability: 50.0, min: 1, max: 2 },
+    { name: 'Griffin Leather', probability: 10.0, min: 1, max: 1 },
+    { name: 'Manticore Sting', probability: 6.0, min: 1, max: 1 },
+    { name: 'Jackalope Antler', probability: 5.0, min: 1, max: 1 },
+    { name: 'Dodocamel Plume', probability: 2.0, min: 1, max: 1 },
+    { name: 'Griffin Talon', probability: 2.0, min: 1, max: 1 },
+    { name: 'Chimerical Chest Key', probability: 2.0, min: 1, max: 1 },
+    { name: 'Chimerical Quiver', probability: 3.0, min: 1, max: 1 },
+    { name: 'Griffin Tunic', probability: 0.3, min: 1, max: 1 },
+    { name: 'Griffin Chaps', probability: 0.3, min: 1, max: 1 },
+    { name: 'Manticore Shield', probability: 0.3, min: 1, max: 1 },
+    { name: 'Jackalope Staff', probability: 0.2, min: 1, max: 1 },
+    { name: 'Dodocamel Gauntlets', probability: 0.15, min: 1, max: 1 },
+    { name: 'Griffin Bulwark', probability: 0.05, min: 1, max: 1 }
   ],
-  'D2': [
-    { name: 'Sinister Essence', probability: 100, min: 400, max: 800 },
-    { name: 'Sinister Essence', probability: 5, min: 2000, max: 4000 },
-    { name: "Acrobat's Ribbon", probability: 4, min: 1, max: 1 },
-    { name: "Magician's Cloth", probability: 4, min: 1, max: 1 },
-    { name: 'Chaotic Chain', probability: 2, min: 1, max: 1 }
+  'D2': [ // Sinister Chest
+    { name: 'Sinister Essence', probability: 100.0, min: 400, max: 800 },
+    { name: 'Sinister Essence', probability: 5.0, min: 2000, max: 4000 },
+    { name: 'Sinister Token', probability: 100.0, min: 250, max: 500 },
+    { name: 'Sinister Token', probability: 5.0, min: 1500, max: 3000 },
+    { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 6 },
+    { name: 'Garnet', probability: 60.0, min: 5, max: 20 },
+    { name: 'Sunstone', probability: 50.0, min: 1, max: 3 },
+    { name: 'Penetrating Strike', probability: 50.0, min: 1, max: 2 },
+    { name: 'Pestilent Shot', probability: 50.0, min: 1, max: 2 },
+    { name: 'Smoke Burst', probability: 50.0, min: 1, max: 2 },
+    { name: "Acrobat's Ribbon", probability: 4.0, min: 1, max: 1 },
+    { name: "Magician's Cloth", probability: 4.0, min: 1, max: 1 },
+    { name: 'Chaotic Chain', probability: 2.0, min: 1, max: 1 },
+    { name: 'Sinister Chest Key', probability: 2.0, min: 1, max: 1 },
+    { name: 'Sinister Cape', probability: 4.0, min: 1, max: 1 },
+    { name: 'Acrobatic Hood', probability: 0.2, min: 1, max: 1 },
+    { name: "Magician's Hat", probability: 0.2, min: 1, max: 1 },
+    { name: 'Chaotic Flail', probability: 0.05, min: 1, max: 1 },
+    { name: 'Cursed Bow', probability: 0.05, min: 1, max: 1 }
   ],
-  'D3': [
+  'D3': [ // Enchanted Chest
     { name: 'Enchanted Essence', probability: 100, min: 400, max: 800 },
-    { name: 'Enchanted Essence', probability: 5, min: 2000, max: 4000 },
-    { name: 'Royal Cloth', probability: 4, min: 1, max: 1 },
-    { name: "Knight's Ingot", probability: 4, min: 1, max: 1 },
-    { name: "Bishop's Scroll", probability: 4, min: 1, max: 1 },
-    { name: 'Regal Jewel', probability: 2, min: 1, max: 1 },
-    { name: 'Sundering Jewel', probability: 2, min: 1, max: 1 }
+    { name: 'Enchanted Essence', probability: 5.0, min: 2000, max: 4000 },
+    { name: 'Enchanted Token', probability: 100, min: 250, max: 500 },
+    { name: 'Enchanted Token', probability: 5.0, min: 1500, max: 3000 },
+    { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 7 },
+    { name: 'Amethyst', probability: 60.0, min: 5, max: 20 },
+    { name: 'Sunstone', probability: 50.0, min: 1, max: 5 },
+    { name: 'Crippling Slash', probability: 50.0, min: 1, max: 2 },
+    { name: 'Penetrating Shot', probability: 50.0, min: 1, max: 2 },
+    { name: 'Arcane Reflection', probability: 50.0, min: 1, max: 2 },
+    { name: 'Mana Spring', probability: 50.0, min: 1, max: 2 },
+    { name: "Knight's Ingot", probability: 4.0, min: 1, max: 1 },
+    { name: "Bishop's Scroll", probability: 4.0, min: 1, max: 1 },
+    { name: 'Royal Cloth', probability: 4.0, min: 1, max: 1 },
+    { name: 'Regal Jewel', probability: 2.0, min: 1, max: 1 },
+    { name: 'Sundering Jewel', probability: 2.0, min: 1, max: 1 },
+    { name: 'Enchanted Chest Key', probability: 2.0, min: 1, max: 1 },
+    { name: 'Enchanted Cloak', probability: 4.0, min: 1, max: 1 },
+    { name: "Knight's Aegis", probability: 0.2, min: 1, max: 1 },
+    { name: "Bishop's Codex", probability: 0.2, min: 1, max: 1 },
+    { name: 'Royal Water Robe Top', probability: 0.04, min: 1, max: 1 },
+    { name: 'Royal Water Robe Bottoms', probability: 0.04, min: 1, max: 1 },
+    { name: 'Royal Nature Robe Top', probability: 0.04, min: 1, max: 1 },
+    { name: 'Royal Nature Robe Bottoms', probability: 0.04, min: 1, max: 1 },
+    { name: 'Royal Fire Robe Top', probability: 0.04, min: 1, max: 1 },
+    { name: 'Royal Fire Robe Bottoms', probability: 0.04, min: 1, max: 1 },
+    { name: 'Regal Sword', probability: 0.05, min: 1, max: 1 },
+    { name: 'Sundering Crossbow', probability: 0.05, min: 1, max: 1 }
   ],
-  'D4': [
-    { name: 'Pirate Essence', probability: 100, min: 400, max: 800 },
-    { name: 'Pirate Essence', probability: 5, min: 2000, max: 4000 },
-    { name: 'Marksman Brooch', probability: 3, min: 1, max: 1 },
-    { name: 'Corsair Crest', probability: 3, min: 1, max: 1 },
-    { name: 'Damaged Anchor', probability: 3, min: 1, max: 1 },
-    { name: 'Maelstrom Plating', probability: 3, min: 1, max: 1 },
-    { name: 'Kraken Leather', probability: 3, min: 1, max: 1 },
-    { name: 'Kraken Fang', probability: 3, min: 1, max: 1 }
+  'D4': [ // Pirate Chest
+    { name: 'Pirate Essence', probability: 100.0, min: 400, max: 800 },
+    { name: 'Pirate Essence', probability: 5.0, min: 2000, max: 4000 },
+    { name: 'Pirate Token', probability: 100.0, min: 250, max: 500 },
+    { name: 'Pirate Token', probability: 5.0, min: 1500, max: 3000 },
+    { name: 'Large Treasure Chest', probability: 30.0, min: 1, max: 8 },
+    { name: 'Moonstone', probability: 50.0, min: 5, max: 20 },
+    { name: 'Sunstone', probability: 50.0, min: 1, max: 6 },
+    { name: 'Shield Bash', probability: 50.0, min: 1, max: 2 },
+    { name: 'Fracturing Impact', probability: 50.0, min: 1, max: 2 },
+    { name: 'Life Drain', probability: 50.0, min: 1, max: 2 },
+    { name: 'Marksman Brooch', probability: 3.0, min: 1, max: 1 },
+    { name: 'Corsair Crest', probability: 3.0, min: 1, max: 1 },
+    { name: 'Damaged Anchor', probability: 3.0, min: 1, max: 1 },
+    { name: 'Maelstrom Plating', probability: 3.0, min: 1, max: 1 },
+    { name: 'Kraken Leather', probability: 3.0, min: 1, max: 1 },
+    { name: 'Kraken Fang', probability: 3.0, min: 1, max: 1 },
+    { name: 'Pirate Chest Key', probability: 2.0, min: 1, max: 1 },
+    { name: 'Marksman Bracers', probability: 0.2, min: 1, max: 1 },
+    { name: 'Corsair Helmet', probability: 0.2, min: 1, max: 1 },
+    { name: 'Anchorbound Plate Body', probability: 0.04, min: 1, max: 1 },
+    { name: 'Anchorbound Plate Legs', probability: 0.04, min: 1, max: 1 },
+    { name: 'Maelstrom Plate Body', probability: 0.04, min: 1, max: 1 },
+    { name: 'Maelstrom Plate Legs', probability: 0.04, min: 1, max: 1 },
+    { name: 'Kraken Tunic', probability: 0.04, min: 1, max: 1 },
+    { name: 'Kraken Chaps', probability: 0.04, min: 1, max: 1 },
+    { name: 'Rippling Trident', probability: 0.03, min: 1, max: 1 },
+    { name: 'Blooming Trident', probability: 0.03, min: 1, max: 1 },
+    { name: 'Blazing Trident', probability: 0.03, min: 1, max: 1 }
+  ],
+  'LargeTreasureChest': [
+    { name: 'Coin', probability: 100, min: 30000, max: 60000 },
+    { name: 'Coin', probability: 10.0, min: 150000, max: 300000 },
+    { name: 'Pearl', probability: 60.0, min: 1, max: 3 },
+    { name: 'Amber', probability: 40.0, min: 1, max: 3 },
+    { name: 'Garnet', probability: 40.0, min: 1, max: 3 },
+    { name: 'Jade', probability: 40.0, min: 1, max: 3 },
+    { name: 'Moonstone', probability: 40.0, min: 1, max: 2 }
   ]
 };
+
 </script>
 
 </body>
