--- a/test3.html
+++ b/test3.html
@@ -312,13 +312,15 @@ async function fetchData() {
   for (const dungeon in lootTables) {
     let averageValue = 0;
     let hasData = false;
-    let missingAsk = false;
+    const missingAskItems = [];
     const loot = lootTables[dungeon];
     for (const drop of loot) {
       const marketItem = market[drop.name];
       if (!marketItem) continue;
       const price = useBidOnly ? (marketItem.bid ?? 0) : Math.max(marketItem.ask ?? 0, marketItem.bid ?? 0);
-      if ((marketItem.ask === undefined || marketItem.ask === 0) && !useBidOnly) missingAsk = true;
+      if ((marketItem.ask === undefined || marketItem.ask <= 0) && !useBidOnly) {
+        missingAskItems.push(drop.name);
+      }
       if (price <= 0) continue;
       hasData = true;
       const expectedQty = (drop.min + drop.max) / 2;
@@ -328,8 +330,12 @@ async function fetchData() {
 
     if (!hasData) {
       warningsContent.innerHTML += `<div>⚠️ Warning: No valid market prices found for ${dungeon} items.</div>`;
-    } else if (missingAsk) {
-      warningsContent.innerHTML += `<div>⚠️ Warning: Some items in ${dungeon} have no Ask price (using Bid price instead).</div>`;
+    }
+    if (!hasData) {
+      warningsContent.innerHTML += `<div>⚠️ Warning: No valid market prices found for ${dungeon} items.</div>`;
+    }
+    for (const missingItem of missingAskItems) {
+      warningsContent.innerHTML += `<div>⚠️ Missing Ask Price: ${missingItem} (${dungeon})</div>`;
     }
 
     let keyCostText = '';
